<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="order_button">Order</string>
    <string name="counter_initial_value">2</string>
    <string name="quantity_textview">Quantity</string>
    <string name="price_textview">Price</string>
    <string name="button_decrement">-</string>
    <string name="button_increment">+</string>
    <string name="order_summary_text_view">Order Summary</string>
    <string name="topping_text">Toppings</string>
    <string name="whipped_cream_text">Whipped Cream</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="hasCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%i</xliff:g></string>
    <string name="order_summary_price">Price: $<xliff:g id="price" example="10">%i</xliff:g></string>
    <string name="thank_you">Thank you!</string>

</resources>