<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="Name"/>

    <TextView
        android:id="@+id/toppings_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping_text"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/whipped_cream_text"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chocolate"
        android:id="@+id/chocolate_checkbox"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>



    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/quantity_textview"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        style="@style/HeaderTextStyle"/>

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="decrement"
            android:text="@string/button_decrement" />

        <TextView
            android:id="@+id/counter_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/counter_initial_value"
            tools:layout_editor_absoluteY="41dp" />

        <Button
            android:id="@+id/button_increment"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="increment"
            android:text="@string/button_increment" />

    </LinearLayout>


    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:onClick="submitOrder"
        android:text="@string/order_button"
        tools:layout_editor_absoluteY="71dp" />


</LinearLayout>